continue cleaning up

--- a/3-model-run/MESH_input_run_options.ini
+++ b/3-model-run/MESH_input_run_options.ini
@@ -31,7 +31,7 @@ INTERPOLATIONFLAG      0
 SAVERESUMEFLAG         0						# set it 4 in case of saving  the resume 
 RESUMEFLAG             0						# set it 4 in case of reading from resume
 OUTFILESFLAG		     on
-AUTOCALIBRATIONFLAG    4
+AUTOCALIBRATIONFLAG    0
 METRICSSPINUP          1
 BASEFLOWFLAG           wf_lzs							 
 BASINAVGWBFILEFLAG 	daily 						    # ns
@@ -47,7 +47,7 @@ SNDENLIM			   600.0
 ----#                                                   #16 comment line 16                             | *
     0   #Maximum 5 points                               #17 Number of output grid points                | I5
 ---------#---------#---------#---------#---------#      #18 comment line 18                             | *
-      1936                                              #19 Grid number                                 | 5I10
+      1936        12                                    #19 Grid number                                 | 5I10
          1                                              #20 Land class                                  | 5I10
 CLASSOUT                                                #21 Output directory                            | 5A10
 ##### Output Directory #####                            #22 comment line 22                             | *
@@ -55,5 +55,5 @@ CLASSOUT                                                #21 Output directory    
 results                                                 #24 Output Directory for total-basin files      | A10
 ##### Simulation Run Times #####                        #25 comment line 25                             | *
 ---#---#---#---#                                        #26 comment line 26                             | *
-AUTOCALIBRATIONFLAG1979 122   0   0                                        #27 Start year, day, hour, minute (2000 275   0   0)             | 4I4
-1979 152   0   0                                        #28 Stop year, day, hour, minute  (2017 274   0   0)             | 4I4
+1980 123   0   0                                        #27 Start year, day, hour, minute (2000 275   0   0)             | 4I4
+1980 151   0   0                                        #28 Stop year, day, hour, minute  (2017 274   0   0)             | 4I4
