--- a/4-model-calibration/model/MESH_input_run_options.ini
+++ b/4-model-calibration/model/MESH_input_run_options.ini
@@ -47,7 +47,7 @@ SNDENLIM			   600.0
 ----#                                                   #16 comment line 16                             | *
     0   #Maximum 5 points                               #17 Number of output grid points                | I5
 ---------#---------#---------#---------#---------#      #18 comment line 18                             | *
-      1936        12                                    #19 Grid number                                 | 5I10
+      	 1                                              #19 Grid number                                 | 5I10
          1                                              #20 Land class                                  | 5I10
 CLASSOUT                                                #21 Output directory                            | 5A10
 ##### Output Directory #####                            #22 comment line 22                             | *
@@ -55,5 +55,5 @@ CLASSOUT                                                #21 Output directory    
 results                                                 #24 Output Directory for total-basin files      | A10
 ##### Simulation Run Times #####                        #25 comment line 25                             | *
 ---#---#---#---#                                        #26 comment line 26                             | *
-1980 123   0   0                                        #27 Start year, day, hour, minute (2000 275   0   0)             | 4I4
-1980 151   0   0                                        #28 Stop year, day, hour, minute  (2017 274   0   0)             | 4I4
+2015 002   0   0                                        #27 Start year, day, hour, minute (2000 275   0   0)             | 4I4
+2015 364   0   0                                        #28 Stop year, day, hour, minute  (2017 274   0   0)             | 4I4
